--- a/Hero-Section-Components/EshwarHeroSection/indexx.html
+++ b/Hero-Section-Components/EshwarHeroSection/indexx.html
@@ -1,1 +1,9 @@
-<!doctype
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>HERO SECTION</SECtion></title>
+</head>
+</html>
